# cppscratch

./: CMakeLists.txt  README.md
include/mji/: algorithm.hpp  math.hpp  memory.hpp  xplat.hpp
tests/: main.cpp
